- Fixed: crAddScreenshot2() nJpegQuality is only used for the first error report 
       then it is always set to 0 (issue 217)
- Fixed: Added file changes (renamed, moved, removed, etc.) within a 
       client program's running session (issue 219)
- Fixed: Adding custom properties with same name results in CrashSender.exe assertion 
       failure (issue 216).

--- Ver. 1.4.2 ---

- New: Added an ability to add multiple files to crash reports with crAddFile2() 
       using file search pattern (e.g. "*.log"). This implements feature request
       described in issue 190.

- New: Added new flag CR_INST_AUTO_THREAD_HANDLERS allowing to 
       install/uninstall exception handlers automatically in DllMain() 
       on DLL_THREAD_ATTACH/DETACH (issue 185).

- New: adjusting dump privileges to avoid error 'Only part of a ReadProcessMemory
       or WriteProcessMemory request was completed.'

- Fixed: Screenshot file still sent even if deleted (issue 186).
- Fixed: Video division by zero (issue 189)
- Fixed: Video missing from report (issue 187)
- Fixed: No crash data is sent to URL when we have a redirect (Issue 191)
- Fixed: CCrashHandler.m_hWndVideoParent not initialized to a 
         default value (issue 195)


--- Ver. 1.4.1 ---

- New: Added an ability to preview OGG video files in Error Report Details dialog.
       To preview a file, select it in the list of files.

- New: Added an bility for end user to delete screenshots, registry keys and video file
       from crash report through context menu of Error Report Details dialog 
       (added CR_AS_ALLOW_DELETE flag for crAddScreenshot2() function,
        CR_AR_ALLOW_DELETE flag for crAddRegKey() function and CR_AV_ALLOW_DELETE
        flag for crAddVideo() function). (issue 183) 

- New: Added back the crExceptionFilter() function removed previously as deprecated. 
       It seems that some users require that function. (issue 175).

- New: Extended unit tests (added ExceptionHandlerTests) (issue 114)
